sna/traps: Upon reducing an ADD to a SRC, we need to apply the pending clear

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=47444
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>